# python-package-template

./: .bumpversion.cfg  .flake8  .gitignore  AUTHORS  CLAUDE.md  INSTALL  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: lint.yaml  release.yaml  tests.yaml
hello_world/: __init__.py  __main__.py  hello.py
test_venv/: pyvenv.cfg
tests/: test_hello.py
