[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MyHelloWorldProject"
version = "0.1.2"
description = "YOUR DESCRIPTION"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "CC0-1.0"}
keywords = ["template", "example"]
authors = [
    {name = "EPC MSU", email = "YOUR_EMAIL@physlab.ru"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    # YOUR DEPENDENCIES ARE HERE
]

[project.optional-dependencies]
dev = [
    "flake8",
    "tox",
    "bump2version",
]
all = [
    "flake8", 
    "tox",
    "bump2version",
]

[project.urls]
Homepage = "https://github.com/EPC-MSU/URL_TO_YOUR_PROJECT"
Repository = "https://github.com/EPC-MSU/URL_TO_YOUR_PROJECT"
Issues = "https://github.com/EPC-MSU/URL_TO_YOUR_PROJECT/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["hello_world*"]